# dialogflow_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
config/: context.yaml  params.yaml
launch/: audio_server.launch  dialogflow.launch  hotword_df.launch  services.launch
msg/: DialogflowContext.msg  DialogflowEvent.msg  DialogflowParameter.msg  DialogflowRequest.msg  DialogflowResult.msg
scripts/: audio_server.py  detect_intent_service.py  dialogflow_client.py  google_client.py  hotword_dialogflow.py  mic_client.py
scripts/test/: test_intent_event.cpp  test_intent_event.py  test_intent_text.py
src/: dialogflow_client.py  mic_client.py
src/dialogflow_ros/: AudioServerStream.py  MicrophoneStream.py  __init__.py  dialogflow_client.py
src/dialogflow_ros/utils/: __init__.py  converters.py  output.py
srv/: DialogflowService.srv
